# LabDevicesManagement

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  TESTCASE.txt  about.html  about_8dox.html  annotated.html  build.sh  device__info_8cpp.html  device__info_8h.html  devices.csv  dir_49e56c817e5e54854c35e136979f97ca.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  lib_8cpp.html  lib_8hpp.html  modules.html  my__borrow__return_8cpp.html  my__borrow__return_8h.html  my__print_8cpp.html  my__print_8h.html  my__search_8cpp.html  my__search_8h.html  my__sort_8cpp.html  my__sort_8h.html  namespaces.html  namespacestd.html  pages.html  searchdata-v2.js  structborrower.html  structdevice__info.html  structlibrary.html  structnode.html  utils_8cpp.html  utils_8h.html
.github/workflows/: ci.yml
app/: main.cpp
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: device_info.h  lib.hpp  my_borrow_return.h  my_print.h  my_search.h  my_sort.h  utils.h
my_program/: main.cpp
source/: device_info.cpp  lib.cpp  my_borrow_return.cpp  my_print.cpp  my_search.cpp  my_sort.cpp  utils.cpp
src/: device_info.cpp  my_borrow_return.cpp  my_print.cpp  my_search.cpp  my_sort.cpp  utils.cpp
test/: CMakeLists.txt
test/source/: LabDevicesManagement_test.cpp
